<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_activity_for_result"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_simple_start_activity_for_result" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_activity_two_for_result"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_simple_start_activity_for_result_two" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_activity_three_for_result"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_simple_start_activity_for_result_three" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_simple_message"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_simple_custom_contract" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_multiple_data_message"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_multiple_input_custom_contract" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_request_single_permission"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_request_single_permission" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_request_single_dangerous_permission"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_request_single_dangerous_permission" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_request_Multiple_permission"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_request_multiple_permission" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_take_picture"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_take_picture" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_take_picture_preview"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_take_picture_preview" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pick_contact"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pick_contact" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_picture"
            android:layout_width="@dimen/dp100"
            android:layout_height="@dimen/dp100"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pick_content"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pick_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pick_multiple_content"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pick_multiple_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_launch_app_setting"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_launch_app_setting" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_document"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_document" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_open_document"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_open_document" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_open_multiple_document"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_open_multiple_document" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_open_document_tree"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_open_document_tree" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_request_notification"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_request_for_notification" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>